# PesquisaLL

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  Counter.h  Instance.cpp  Instance.h  Node.cpp  Node.h  Route.cpp  Route.h  SeachLocalSearch.cpp  Search.cpp  Search.h  SearchDeltaCalc.cpp  SearchIG.cpp  SearchPersister.cpp  SearchPropagator.cpp  SearchValidator.cpp  Sequence.cpp  Sequence.h  Solution.cpp  Solution.h  Stats.cpp  Stats.h  Utils.cpp  Utils.h  irace_recompile_run.bat  main.cpp  recompile_run.bat
Docs/: TODO.md  Untitled-1.txt  Untitled-3.txt  Untitled.ipynb  analise buscas.md  entendendo.txt  nota  perguntar_autor  rodar gurobi.bat  stats.rar  test.py  testing  todo  todo 11-02  todo 2202
Docs/gprof/: gmon.out  (+1 more)
Output/: C101_co_100.txt  C101_co_50.txt  C102_co_100.txt  C102_co_25.txt  C102_co_50.txt  C103_co_100.txt  C103_co_25.txt  C103_co_50.txt  C104_co_100.txt  C104_co_25.txt  C104_co_50.txt  C105_co_100.txt  C105_co_25.txt  C105_co_50.txt  C106_co_100.txt  C106_co_25.txt  C106_co_50.txt  C107_co_100.txt  C107_co_25.txt  C107_co_50.txt  C108_co_100.txt  C108_co_25.txt  C108_co_50.txt  C109_co_100.txt  C109_co_25.txt  C109_co_50.txt  C201_co_100.txt  C201_co_25.txt  C201_co_50.txt  C202_co_100.txt  C202_co_25.txt  C202_co_50.txt  C203_co_100.txt  C203_co_25.txt  C203_co_50.txt  C204_co_100.txt  C204_co_25.txt  C204_co_50.txt  C205_co_100.txt  C205_co_25.txt  (+126 more)
instance_factory/: Evrptwprpl.cpp  Evrptwprpl.h  Factory.cpp  Factory.h  Vrppl.cpp  Vrppl.h
instances/: 00.txt  at  fix.py  fix_data  instances.txt  instancesOrigem.txt  instances_vrppl.txt
(+4100 files in other folders)
